...
                />
                <View style={{position: 'absolute', bottom: this.state.keyboardHeight + 16, left: 20}}>
                    <View style={s.dots}>
                        <View style={[s.dot, {backgroundColor: '#6060FF'}]} />
                        <View style={s.dot} />
                    </View>
                    <Button onPress={this.next} text="Next" width={w('90%')} testID="continue" />
                </View>
            </View>
        );
    }
}

const s = StyleSheet.create({
    create: {
        fontSize: 40,
        fontWeight: 'bold',
        color: '#0F0F28',
    },
    input: {
        fontSize: 32,
...
