...
            return (
                <TouchableOpacity
                    activeOpacity={1}
                    onPress={send}
                    style={{justifyContent: 'center', alignItems: 'center', width: 24, height: 40}}
                    hitSlop={{right: 12, top: 12, bottom: 12}}
                    testID="composer-action-button">
                    {!text && Platform.OS === 'ios' ? (
                        <Animated.View
                            style={[s.micContainer, {transform: [{scale: vsAnimation}], opacity: vsAnimation}]}>
                            <Icon name="microphone" size={28} color="silver" thin />
                        </Animated.View>
                    ) : (
...
            <TouchableOpacity
                onPress={() => {
                    if (!props.isConnected) {
                        Alert.alert('No Internet Connection!', 'Please make sure you are connected to the internet.');
                        return;
                    }
                    props.openModal({modalName: 'composer'});
                }}
                style={s.attachContainer}>
                <Icon name="plus" size={28} color="silver" />
            </TouchableOpacity>
        );
    };
...
