...
                            style={{width: w('90%'), padding: 10}}
                        />
                        <TouchableOpacity
                            style={s.cancelContainer}
                            onPress={this.cancelInvite}
                            activeOpacity={1}
                            testID="cancel-link"
                            hitSlop={{left: 12, right: 12, top: 8, bottom: 8}}>
                            <Text style={s.cancel}>Cancel</Text>
                        </TouchableOpacity>
                    </View>
                </SafeAreaView>
                {isIphoneXD && <View style={{backgroundColor: '#fff', width: w('100%'), height: 40}} />}
...
                    onPress={() => this.props.navigation.navigate('NewChat')}
                    text="New Chat"
                    icon={<Icon regular name="comment-plus" size={15} />}
                />
                <ActionButton
                    onPress={() => this.props.navigation.navigate('GroupCreate', {})}
                    text="Create Group"
                    icon={<Icon regular name="users-medical" size={15} />}
                    style={{marginLeft: 8}}
                    testID="create-group"
                />
            </View>
        );
...
