...
import {TTarget} from '@/src/types';

export interface IAppState {
    version: string;
    noUsersFound: boolean;
    phone: string;
    email: string;
    imagesUrls: {[key: string]: string};
    shouldReqContactsPermission: boolean;
    requestSavePasswordCount: number;
    seenPasswordModal: boolean;
    seenBackupModal: boolean;
    askedAutoBackup: boolean;
...
