...
        if (!props.keyboardHeight)
            props.dispatchKeyboardHeight({height: PixelRatio.getPixelSizeForLayoutSize(e.endCoordinates.height)});
    };

    const handleContinue = () => {
        props.requestEmailCode({
            email: email.toLowerCase(),
            callback: (registered) =>
                props.navigation.replace('Code', {method: 'email', authId: email.toLowerCase(), registered}),
        });
    };

    const checkInput = async () => {
...
                    <Button
                        onPress={checkInput}
                        text="Continue with email"
                        marginTop={16}
                        width={w('90%')}
                        icon="envelope"
                        testID="continue"
                    />
                    <View style={s.separatorContainer}>
                        <View style={s.line} />
                        <Text style={s.orText}>or</Text>
                        <View style={s.line} />
                    </View>
...
