...
                            </Text>
                        </Pressable>
                    )}
                    <Pressable
                        onPress={() => navigation.navigate('ManageStorage')}
                        style={{flexDirection: 'row', alignItems: 'center'}}
                        testID="manage-storage"
                    >
                        <Text style={{color: 'grey'}}>Storage</Text>
                        <Icon solid style={{marginLeft: 4}} name="chevron-right" size={15} color="darkgrey" />
                    </Pressable>
                </View>
            )}
...
