...
        },
    ];

    return (
        <ScrollView
            ref={listRef}
            testID="home-screen"
            refreshControl={
                <RefreshControl
                    refreshing={refreshing}
                    onRefresh={refresh}
                    tintColor={colors.primary}
                    colors={[colors.primary]}
...
