...
    navigation: NavigationProp<ProfileStackParamList>;
    profilePicture: TImage | null;
};

interface EditProfileScreenState {
    dateString: string;
    name: string;
    initialName: string;
    username: string;
    initialUsername: string;
    profilePicture: TProfilePicture | null;
    cover: TProfileCover | null;
    status: string;
    birthDay: Date | string;
    birthDayHidden: boolean;
    initialBDH: boolean;
    websiteLink: string;
    initialWebsiteLink: string;
    modalVisible: boolean;
...
        const coverSource = pc ? {uri: pc.uri} : cover || DefaultProfileCover;
        const PictureComponent: React.ElementType = pp?.uriKey && !this.props.profilePicture ? NewImage : Image;
        const CoverComponent: React.ElementType = pc?.uriKey && !this.props.cover ? NewImage : Image;
        const Component = Platform.OS === 'ios' ? KeyboardAwareScrollView : ScrollView;
        return (
            <Component
                testID="edit-profile-scroll"
                showsVerticalScrollIndicator={false}
                contentContainerStyle={{alignItems: 'center', paddingBottom: Platform.OS === 'ios' ? 40 : 40 + globalData.bottomBarHeight}}>
                {this.renderModal()}
                <TouchableOpacity
                    testID="cover-photo"
                    onPress={() => this.selectPhotos(true)}
                    activeOpacity={1}
                    onLongPress={() => this.setState({modalVisible: true, modalCover: true})}>
                    <CoverComponent
                        source={coverSource}
                        style={s.cover}
...
                        <TouchableOpacity activeOpacity={1} style={s.circle} onPress={this.resizeCover}>
                            <Icon name="minimize-2" size={28} color="white" />
                        </TouchableOpacity>
                    )}
                </TouchableOpacity>
                <TouchableOpacity
                    testID="profile-picture"
                    activeOpacity={1}
                    style={{marginBottom: 24, marginTop: 24}}
                    onPress={() => this.selectPhotos(false)}
                    onLongPress={() => this.setState({modalVisible: true})}>
                    <Text style={s.label}>Profile Picture</Text>
                    <PictureComponent
...
                            <Icon name="minimize-2" size={28} color="#fff" />
                        </TouchableOpacity>
                    )}
                </TouchableOpacity>

                <Input
                    testID="name-input"
                    label="Name"
                    onChangeText={(name) => this.setState({name})}
                    value={name}
                    maxLength={23}
                    style={{marginBottom: 16}}
                />
                <Input
                    testID="username-input"
                    label={error === null ? 'Username' : error}
                    onChangeText={this.onUsernameChange}
                    value={username}
                    color={error === null ? '#6060FF' : 'red'}
                    maxLength={23}
                    style={{marginBottom: 16}}
...
                    this.state.initialUsername.toLowerCase() !== this.props.validUsername.username && (
                        <View style={s.errorContainer}>
                            <Text style={s.error}>This username is not available!</Text>
                        </View>
                    )}
                <Input
                    testID="status-input"
                    label="Status"
                    placeholder="Add a status"
                    onChangeText={(status) => this.setState({status})}
                    value={status}
                    maxLength={60}
                    style={{marginBottom: 16}}
                />
                <Input
                    testID="website-input"
                    label="Website"
                    placeholder="Add your website"
                    onChangeText={(websiteLink) => this.setState({websiteLink})}
                    value={websiteLink}
                    maxLength={60}
                    style={{marginBottom: 16}}
...
