...
                            {user.websiteLink && (
                                <View style={{flexDirection: 'row'}}>
                                    <View style={s.iconContainer}>
                                        <FeatherIcon name="link" size={16} color="grey" />
                                    </View>
                                    <Text
                                        testID="website"
                                        onPress={() => Linking.openURL(`http://${user.websiteLink}`)}
                                        style={[s.subInfo, {color: '#6060FF'}]}>
                                        {user.websiteLink}
                                    </Text>
                                </View>
                            )}
...
                    <ProfilePicture onPress={this.openPic} user={user} size={160} />
                </View>
                <View style={{height: 100}} />
                <ActionButton
                    onPress={this.editProfile}
                    text="Edit profile"
                    testID="edit-profile"
                    icon={<Icon regular name="pencil" size={15} />}
                    style={s.editButton}
                />
            </View>
        );
    };
...
