...
        <View style={{height: 40, flexDirection: 'row', marginTop: 12, marginBottom: 12}}>
            <TextModal
                visible={captionModal}
                onBackdropPress={() => setCaptionModal(false)}
                onChangeText={(caption) => setCaption(caption)}
                value={caption}
                done={() => {
                    setCaptionModal(false);
                    setTimeout(() => props.dispatchImagesState({caption}), 0);
                }}
                maxLength={500}
            />
            <TouchableOpacity style={s.input} activeOpacity={1} onPress={() => setCaptionModal(true)}>
...
