...
        fontWeight: 'bold',
        maxWidth: 260,
        bottom: isIphoneXD ? 6.5 : 0,
    },

    // Profile
    settings: {
        width: 30,
    },
});

export default s;

